[gd_scene load_steps=21 format=3 uid="uid://8onv0icy5g7h"]

[ext_resource type="Script" path="res://scripts/Characthers/Enemy_Green.gd" id="1_bh1ro"]
[ext_resource type="AudioStream" uid="uid://bw3djxfntr0jb" path="res://sounds/SFX/Monster/monster_die.wav" id="3_hw3m5"]
[ext_resource type="Texture2D" uid="uid://2semeicsex86" path="res://sprites/Monster/monster1_sprite.png" id="4_0ryar"]
[ext_resource type="AudioStream" uid="uid://bud3mha4g5u45" path="res://sounds/SFX/Monster/monster_bite.wav" id="4_fgou3"]
[ext_resource type="FontFile" uid="uid://b6b3cu5hbka6f" path="res://fonts/Hey Comic.otf" id="5_yia1e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0of21"]
margin = 2.871
radius = 0.75
height = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rb0uk"]
atlas = ExtResource("4_0ryar")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqw5c"]
atlas = ExtResource("4_0ryar")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sthp3"]
atlas = ExtResource("4_0ryar")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wv1e"]
atlas = ExtResource("4_0ryar")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u1d0"]
atlas = ExtResource("4_0ryar")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_otk1p"]
atlas = ExtResource("4_0ryar")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r8ql"]
atlas = ExtResource("4_0ryar")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljevl"]
atlas = ExtResource("4_0ryar")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxu22"]
atlas = ExtResource("4_0ryar")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayj74"]
atlas = ExtResource("4_0ryar")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecwbb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb0uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqw5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sthp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wv1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u1d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otk1p")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r8ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljevl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxu22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayj74")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hltyo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js5y0"]
bg_color = Color(0.141176, 0.458824, 0.137255, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_vfcuh"]
viewport_path = NodePath("SubViewport")

[node name="Enemy" type="CharacterBody3D" groups=["enemy", "green"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_bh1ro")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.967487, 0)
shape = SubResource("CapsuleShape3D_0of21")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_hw3m5")
volume_db = 5.0
unit_size = 2.0
bus = &"SFX"
emission_angle_degrees = 90.0

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-3.47118e-08, 0, -0.794113, 0, 0.794113, 0, 0.794113, 0, -3.47118e-08, 0, 1, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_ecwbb")
animation = &"death"
autoplay = "idle"

[node name="MonsterBite" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_fgou3")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_right = 128.0
offset_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_hltyo")
theme_override_styles/fill = SubResource("StyleBoxFlat_js5y0")
max_value = 15.0
value = 15.0
show_percentage = false

[node name="Label" type="Label" parent="SubViewport/ProgressBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_yia1e")
theme_override_font_sizes/font_size = 35

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.300892, 2.05186, 0.355587)
billboard = 1
texture = SubResource("ViewportTexture_vfcuh")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -0.5
use_3d_avoidance = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
